; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_lib.c_scsi_alloc_sgtable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_lib.c_scsi_alloc_sgtable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_data_buffer = type { i32 }

@SCSI_MAX_SG_SEGMENTS = common dso_local global i32 0, align 4
@scsi_sg_alloc = common dso_local global i32 0, align 4
@scsi_sg_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_data_buffer*, i32, i32)* @scsi_alloc_sgtable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scsi_alloc_sgtable(%struct.scsi_data_buffer* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.scsi_data_buffer*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.scsi_data_buffer* %0, %struct.scsi_data_buffer** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @BUG_ON(i32 %11)
  %13 = load %struct.scsi_data_buffer*, %struct.scsi_data_buffer** %4, align 8
  %14 = getelementptr inbounds %struct.scsi_data_buffer, %struct.scsi_data_buffer* %13, i32 0, i32 0
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @SCSI_MAX_SG_SEGMENTS, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @scsi_sg_alloc, align 4
  %19 = call i32 @__sg_alloc_table(i32* %14, i32 %15, i32 %16, i32 %17, i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i64 @unlikely(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %3
  %24 = load %struct.scsi_data_buffer*, %struct.scsi_data_buffer** %4, align 8
  %25 = getelementptr inbounds %struct.scsi_data_buffer, %struct.scsi_data_buffer* %24, i32 0, i32 0
  %26 = load i32, i32* @SCSI_MAX_SG_SEGMENTS, align 4
  %27 = load i32, i32* @scsi_sg_free, align 4
  %28 = call i32 @__sg_free_table(i32* %25, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %23, %3
  %30 = load i32, i32* %7, align 4
  ret i32 %30
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @__sg_alloc_table(i32*, i32, i32, i32, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @__sg_free_table(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
